--- a/main-css.css
+++ b/main-css.css
@@ -12,6 +12,9 @@
 
 body {
     font-family: Arial, sans-serif;
+    background-image: url('Background.jpg');
+    background-repeat: repeat;
+    background-size: auto;
 }
 
 h1, p{
