--- a/main-css.css
+++ b/main-css.css
@@ -12,7 +12,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('Background.jpg');
+    background-image: url('Background.png');
     background-repeat: repeat;
     background-size: auto;
 }
