--- a/main-css.css
+++ b/main-css.css
@@ -1,4 +1,5 @@
 
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -15,6 +16,20 @@ body {
     background-image: url('Background.png');
     background-repeat: repeat;
     background-size: auto;
+}
+
+.bg-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(132, 194, 171, 0.8); 
+    pointer-events: none;
+    width:100%;
+    height:220%;
+    z-index: -5; 
+    transition: background-color 1s ease-in-out;
 }
 
 h1, p{
@@ -40,6 +55,7 @@ h1, p{
     border-radius: 25px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
     margin: 1.5rem 0;
+    z-index: 2;
 }
 
 .text-box:hover{
